force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Contracted_Days__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Days__c</fullName>
    <description>Days from Contract Start Date to Current Date if the contract is In Effect and Start Date is set.</description>
    <formula>IF(AND(NOT(ISNULL(Contract_Start_Date__c )), ISPICKVAL(Status_Category__c,&quot;In Effect&quot;)), (TODAY() - Contract_Start_Date__c ) + 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>