force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of this agreement</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comments from Requestor or business team</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>