force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Executed_Copy_Mailed_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Executed_Copy_Mailed_Out_Date__c</fullName>
    <description>Date the final, executed copy was mailed to the other party</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Executed Copy Mailed Out Date</label>
    <type>Date</type>
</CustomField>