force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>FF_Agreement_Number__c</fullName>
    <description>Identifies the agreement number, including the version number.  Use this field to display on screens, reports, dashboards, search filters and columns, etc.  The other agreement number fields are for internal use only.</description>
    <formula>Agreement_Number__c  &amp; &quot;.&quot; &amp;  TEXT(CEILING(Version_Number__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Number</label>
    <type>Text</type>
</CustomField>