force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_Cancel_Request__c.field-meta.xml
<CustomField>
    <fullName>FF_Cancel_Request__c</fullName>
    <description>Cancel the agreement request</description>
    <formula>IF (AND(OR(ISPICKVAL(Status_Category__c,&quot;Request&quot;), ISPICKVAL(Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Status_Category__c,&quot;In Filing&quot;)),NOT(ISPICKVAL(Status__c,&quot;Cancelled Request&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/LightningAgreementCancel?id=&quot; &amp;Id, IMAGE(&quot;/resource/Button_CancelRequest&quot;, &quot;Cancel Request&quot;), &quot;_self&quot;) , HYPERLINK(&quot;/apex/AgreementCancel?id=&quot; &amp;Id, IMAGE(&quot;/resource/Button_CancelRequest&quot;, &quot;Cancel Request&quot;), &quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cancel the agreement request</inlineHelpText>
    <label>Cancel Request</label>
    <type>Text</type>
</CustomField>