force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_Execute__c.field-meta.xml
<CustomField>
    <fullName>FF_Execute__c</fullName>
    <description>Activates the agreement</description>
    <formula>IF (AND(OR(ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Status_Category__c,&quot;In Filing&quot;), AND(ISPICKVAL(Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Source__c,&quot;Other Party Paper&quot;))),NOT(ISPICKVAL(Status__c,&quot;In Clause Approval&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;), HYPERLINK(&quot;/apex/ActivateAgreement?id=&quot; &amp;Id, IMAGE(&quot;/resource/Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;) , HYPERLINK(&quot;/apex/AgreementActivate?id=&quot; &amp;Id, IMAGE(&quot;/resource/Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;)),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Activates the agreement</inlineHelpText>
    <label>Activate</label>
    <type>Text</type>
</CustomField>