force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_Generate_Supporting_Document__c.field-meta.xml
<CustomField>
    <fullName>FF_Generate_Supporting_Document__c</fullName>
    <formula>IF (NOT(ISPICKVAL(Status_Category__c,&quot;Import&quot;)), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Generate_Supporting_Document&amp;templateType=Supporting_Document&quot;, IMAGE(&quot;/resource/Button_GenerateSupportingDocument&quot;, &quot;Generate Supporting Document&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Generate_Supporting_Document&amp;templateType=Supporting_Document&quot;, IMAGE(&quot;/resource/Button_GenerateSupportingDocument&quot;, &quot;Generate Supporting Document&quot;),&quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Supporting Document</label>
    <type>Text</type>
</CustomField>