force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_Generate_Unprotected_Agreement__c.field-meta.xml
<CustomField>
    <fullName>FF_Generate_Unprotected_Agreement__c</fullName>
    <description>Generates an editable unprotected agreement</description>
    <formula>IF (ISPICKVAL(Status_Category__c, &quot;Request&quot;), HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b50000000lgoN&quot;&amp;&quot;&amp;eid=&quot;&amp;Id, &quot;Generate Agreement&quot;,&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Unprotected (OBSOLETE)</label>
    <type>Text</type>
</CustomField>