force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_Regenerate_Agreement__c.field-meta.xml
<CustomField>
    <fullName>FF_Regenerate_Agreement__c</fullName>
    <description>Conditionally show the &quot;Regenerate&quot; custom button</description>
    <formula>IF (AND(OR(ISPICKVAL(Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Status_Category__c,&quot;In Filing&quot;)),NOT(ISPICKVAL(Status__c,&quot;In Clause Approval&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Regenerate the agreement</inlineHelpText>
    <label>Regenerate</label>
    <type>Text</type>
</CustomField>