force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_Send_To_Other_Party_For_Signatures__c.field-meta.xml
<CustomField>
    <fullName>FF_Send_To_Other_Party_For_Signatures__c</fullName>
    <description>Send the agreement for signatures</description>
    <formula>IF (AND(OR(ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Status_Category__c,&quot;In Authoring&quot;)),NOT(ISPICKVAL(Status__c,&quot;In Clause Approval&quot;))),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/LightningSendEmailWizard?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Signatures&quot;, IMAGE(&quot;/resource/Button_SendForSignatures&quot;, &quot;Send For Signatures&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Signatures&quot;, IMAGE(&quot;/resource/Button_SendForSignatures&quot;, &quot;Send For Signatures&quot;), &quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Send the agreement for signatures</inlineHelpText>
    <label>Send For Signatures</label>
    <type>Text</type>
</CustomField>