force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_Submit_For_Changes__c.field-meta.xml
<CustomField>
    <fullName>FF_Submit_For_Changes__c</fullName>
    <description>Submit agreement for changes</description>
    <formula>IF (OR(AND(ISPICKVAL(Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Source__c,&quot;Other Party Paper&quot;)),(ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;))),HYPERLINK(&quot;/apex/AgreementSubmitChanges?id=&quot; &amp;Id, IMAGE(&quot;/resource/Button_SubmitForChanges&quot;, &quot;Submit For Changes&quot;), &quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Submit agreement for changes</inlineHelpText>
    <label>Submit For Changes</label>
    <type>Text</type>
</CustomField>