force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_Submit_Request__c.field-meta.xml
<CustomField>
    <fullName>FF_Submit_Request__c</fullName>
    <description>Submit the agreement request</description>
    <formula>IF (AND(ISPICKVAL(Status_Category__c,&quot;Request&quot;),OR(ISPICKVAL(Status__c,&quot;Request&quot;),ISPICKVAL(Status__c,&quot;In Amendment&quot;),ISPICKVAL(Status__c,&quot;In Renewal&quot;),ISPICKVAL(Status__c,&quot;&quot;))), HYPERLINK(&quot;/apex/AgreementSubmitRequest?id=&quot; &amp;Id, IMAGE(&quot;/resource/Button_SubmitRequest&quot;, &quot;Submit Request&quot;), &quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Submit the agreement request</inlineHelpText>
    <label>Submit Request</label>
    <type>Text</type>
</CustomField>