force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_Terminate__c.field-meta.xml
<CustomField>
    <fullName>FF_Terminate__c</fullName>
    <description>Terminate the agreement</description>
    <formula>IF (OR(AND(ISPICKVAL(Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Status__c,&quot;Being Renewed&quot;)), NOT(ISPICKVAL(Status__c,&quot;Being Activated&quot;)))),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/LightningAgreementTerminate?id=&quot; &amp; Id, IMAGE(&quot;/resource/Button_Terminate&quot;, &quot;Terminate&quot;),&quot;_self&quot;), HYPERLINK(&quot;/apex/AgreementTerminate?id=&quot; &amp; Id, IMAGE(&quot;/resource/Button_Terminate&quot;, &quot;Terminate&quot;),&quot;_self&quot;)), NULL)</formula>
    <inlineHelpText>Terminate the agreement</inlineHelpText>
    <label>Terminate</label>
    <type>Text</type>
</CustomField>