force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_View_Draft_Contract__c.field-meta.xml
<CustomField>
    <fullName>FF_View_Draft_Contract__c</fullName>
    <description>Conditionally show the &quot;Preview&quot; custom button if the contract status is Request</description>
    <formula>IF (ISPICKVAL(Status_Category__c, &quot;Request&quot;), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Preview_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Preview_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Preview the agreement</inlineHelpText>
    <label>Preview</label>
    <type>Text</type>
</CustomField>