force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__FF_View_Final_Contract__c.field-meta.xml
<CustomField>
    <fullName>FF_View_Final_Contract__c</fullName>
    <description>Conditionally show the &quot;Generate&quot; custom button if the contract status category is &quot;Request&quot;.</description>
    <formula>IF (ISPICKVAL(Status_Category__c, &quot;Request&quot;), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),  HYPERLINK(&quot;/apex/LightningSelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;) ,  HYPERLINK(&quot;/apex/SelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This applies only for HFX Access BAAs and Mutual NDAs</inlineHelpText>
    <label>Generate</label>
    <type>Text</type>
</CustomField>