force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Import_Offline_Document__c.field-meta.xml
<CustomField>
    <fullName>Import_Offline_Document__c</fullName>
    <description>Conditionally show the &quot;Import Document&quot; custom link if the status category is not &quot;In Effect&quot; or &quot;Expired&quot; or &quot;Terminated&quot; or &quot;Amended&quot; or &quot;Cancelled&quot; or &quot;Import&quot;</description>
    <formula>IF (NOT(OR(ISPICKVAL(Status_Category__c, &quot;In Effect&quot;), ISPICKVAL(Status_Category__c, &quot;Expired&quot;),ISPICKVAL(Status_Category__c, &quot;Terminated&quot;),ISPICKVAL(Status_Category__c, &quot;Amended&quot;),ISPICKVAL(Status_Category__c, &quot;Cancelled&quot;),ISPICKVAL(Status_Category__c, &quot;Import&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/LightningOfflineDocumentImport?id=&quot;&amp;Id, IMAGE(&quot;/resource/Button_ImportOfflineDocument&quot;, &quot;Import Offline Document&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/OfflineDocumentImport?id=&quot;&amp;Id, IMAGE(&quot;/resource/Button_ImportOfflineDocument&quot;, &quot;Import Offline Document&quot;),&quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Offline Document</label>
    <type>Text</type>
</CustomField>