force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__ImportSupportingDocument__c.field-meta.xml
<CustomField>
    <fullName>ImportSupportingDocument__c</fullName>
    <formula>IF ((VersionAware__c ), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/LightningOfflineDocumentImport?action=ImportSupportingDocument&amp;id=&quot;&amp;Id, IMAGE(&quot;/resource/Button_ImportSupportingDocument&quot;, &quot;Import Supporting Document&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/OfflineDocumentImport?action=ImportSupportingDocument&amp;id=&quot;&amp;Id, IMAGE(&quot;/resource/Button_ImportSupportingDocument&quot;, &quot;Import Supporting Document&quot;),&quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Supporting Document</label>
    <type>Text</type>
</CustomField>