force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Internal_Renewal_Notification_Days__c.field-meta.xml
<CustomField>
    <fullName>Internal_Renewal_Notification_Days__c</fullName>
    <description>Notification period prior to Renewal Notice Date when notification is sent out internally that renewal is approaching</description>
    <label>Internal Renewal Notification Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>