force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__IsInternalReview__c.field-meta.xml
<CustomField>
    <fullName>IsInternalReview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates internal review was initiated</description>
    <label>Is Internal Review</label>
    <type>Checkbox</type>
</CustomField>