force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__LatestDocId__c.field-meta.xml
<CustomField>
    <fullName>LatestDocId__c</fullName>
    <description>ID of the latest document version</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Doc ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>