force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Other_Party_Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Returned_Date__c</fullName>
    <description>Date other party returned signed agreement</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Party Returned Date</label>
    <type>Date</type>
</CustomField>