force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Other_Party_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Sent_Date__c</fullName>
    <description>Date agreement was sent to other party for signatures</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Party Sent Date</label>
    <type>Date</type>
</CustomField>