force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Other_Party_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to contact record to identify external signatory</description>
    <label>Other Party Signed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N50000001Xl0MEAS</relationshipName>
    <type>Lookup</type>
</CustomField>