force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Other_Party_Signed_By_Unlisted__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Signed_By_Unlisted__c</fullName>
    <description>Identifies other party signed by person that is not listed as a contact in salesforce</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Party Signed By (Unlisted)</label>
    <type>TextArea</type>
</CustomField>