force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Other_Party_Signed_Title__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Signed_Title__c</fullName>
    <description>Title of person signing on bahalf of Other Party</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Party Signed Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>