force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Outstanding_Days__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Days__c</fullName>
    <description>Number of days between date agreement was today, if not returned as yet.  Esle number of days between returned and sent.</description>
    <formula>IF(ISNULL(  Other_Party_Returned_Date__c ), TODAY () -   Other_Party_Sent_Date__c ,   Other_Party_Returned_Date__c   -   Other_Party_Sent_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>